--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_it: ^7.2.0
   flutter_svg: ^1.0.0
   cached_network_image: ^3.2.0
+  palette_generator: ^0.3.2
 
 dev_dependencies:
   flutter_test:
