--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^1.0.0
   cached_network_image: ^3.2.0
   palette_generator: ^0.3.2
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_test:
