--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   build_runner: ^2.1.7 
   json_serializable: ^6.1.3
   freezed: ^1.1.0
+  flutter_native_splash: ^1.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -103,3 +104,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#3558CD"
+  image: images/splash.png
+  branding_mode: bottom
