--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   retrofit_generator: ^3.0.1+1
-  build_runner: ^2.1.7 
+  build_runner: ^2.1.7
+  build_test: ^2.1.5 
   json_serializable: ^6.1.3
   freezed: ^1.1.0
   flutter_native_splash: ^1.3.3
@@ -110,8 +111,3 @@ flutter_native_splash:
   color: "#3558CD"
   image: images/splash.png
   branding_mode: bottom
-
-analyzer:
-  exclude:
-    - '**.freezed.dart'
-    - '**.g.dart'
